--- a/mobile/src/main/res/layout/content_driving_blue.xml
+++ b/mobile/src/main/res/layout/content_driving_blue.xml
@@ -75,10 +75,12 @@
     </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/ll_right"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_widthPercent="75%h">
 
         <View
@@ -136,41 +138,6 @@
             </com.zhy.android.percent.support.PercentLinearLayout>
         </FrameLayout>
 
-        <com.zhy.android.percent.support.PercentRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="340">
-
-            <com.zhy.android.percent.support.PercentLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_heightPercent="90%h">
-
-                <com.wow.carlauncher.common.view.CustomRoundAngleImageView
-                    android:id="@+id/music_iv_cover"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:contentDescription="@string/app_name"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/music_dlogo"
-                    app:layout_heightPercent="75%h"
-                    app:layout_widthPercent="75%h"
-                    app:radius="6dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:gravity="center"
-                    android:text="音乐名称"
-                    android:textColor="#fff"
-                    app:layout_heightPercent="25%h"
-                    app:layout_textSizePercent="18%h" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
-
-        </com.zhy.android.percent.support.PercentRelativeLayout>
 
         <com.zhy.android.percent.support.PercentRelativeLayout
             android:layout_width="match_parent"
@@ -268,12 +235,120 @@
             </FrameLayout>
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
-        <LinearLayout
+        <com.zhy.android.percent.support.PercentRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="265"
-            android:gravity="center"
-            android:orientation="vertical" />
+            android:layout_weight="340">
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_heightPercent="90%h"
+                app:layout_widthPercent="75%w">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="音乐名称"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="25%h" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/music_ll_prew"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:id="@+id/music_iv_prew"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:src="@mipmap/ic_prev2_b"
+                            app:layout_heightPercent="50%h"
+                            app:layout_widthPercent="50%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/music_ll_play"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:id="@+id/music_iv_play"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:src="@mipmap/ic_play2_b"
+                            app:layout_heightPercent="50%h"
+                            app:layout_widthPercent="50%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/music_ll_next"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:id="@+id/music_iv_next"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:src="@mipmap/ic_next2_b"
+                            app:layout_heightPercent="50%h"
+                            app:layout_widthPercent="50%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+                </LinearLayout>
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="265">
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_heightPercent="90%h"
+                app:layout_widthPercent="75%w">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|end"
+                    android:text="10:11:11"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|end"
+                    android:text="5月16日 星期一"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="30%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </com.zhy.android.percent.support.PercentRelativeLayout>
     </LinearLayout>
 
     <ImageView
