--- a/mobile/src/main/res/layout/content_driving_blue.xml
+++ b/mobile/src/main/res/layout/content_driving_blue.xml
@@ -55,23 +55,52 @@
             android:src="@mipmap/driving_blue_center_rpm_cursor"
             android:visibility="gone" />
 
-        <com.zhy.android.percent.support.PercentLinearLayout
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:id="@+id/rl_main_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_speed"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="0"
                 android:textColor="#fff"
-                android:visibility="gone"
                 app:layout_heightPercent="22%h"
                 app:layout_textSizePercent="11%h"
                 app:layout_widthPercent="22%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <!--<com.zhy.android.percent.support.PercentLinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:orientation="horizontal"-->
+            <!--app:layout_heightPercent="10%h">-->
+
+            <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:gravity="center"-->
+            <!--android:text="道路千万条"-->
+            <!--android:textColor="#fff"-->
+            <!--app:layout_textSizePercent="50%h" />-->
+
+            <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:gravity="center"-->
+            <!--android:text="安全第一条"-->
+            <!--android:textColor="#fff"-->
+            <!--app:layout_textSizePercent="50%h" />-->
+            <!--</com.zhy.android.percent.support.PercentLinearLayout>-->
+
+
+        </com.zhy.android.percent.support.PercentRelativeLayout>
     </FrameLayout>
 
     <LinearLayout
@@ -442,35 +471,17 @@
             android:layout_height="0dp"
             android:layout_weight="265">
 
-            <com.zhy.android.percent.support.PercentLinearLayout
+            <TextView
+                android:id="@+id/tv_date"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_heightPercent="90%h"
-                app:layout_widthPercent="75%w">
-
-                <TextView
-                    android:id="@+id/tv_date_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|end"
-                    android:text="10:11:11"
-                    android:textColor="#fff"
-                    app:layout_textSizePercent="30%h" />
-
-                <TextView
-                    android:id="@+id/tv_date_day"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|end"
-                    android:text="5月16日 星期一"
-                    android:textColor="#fff"
-                    app:layout_textSizePercent="30%h" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
+                android:layout_centerHorizontal="true"
+                android:gravity="center_vertical|end"
+                android:text="10:11:11"
+                android:textColor="#fff"
+                app:layout_heightPercent="50%h"
+                app:layout_textSizePercent="25%h"
+                app:layout_widthPercent="75%w" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
     </LinearLayout>
 
